# harborline-hoppscotch-showcase

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: cd.yml  ci.yml
config/: api.env  hoppscotch.env  hoppscotch.env.example  inventory.seed.json  ui.defaults.json
deploy/: .env.example  docker-compose.prod.yml
harborline/: clock.py  container.py  deps.py  domain.py  errors.py  id_provider.py  logging.py  main.py  observability.py  repositories.py  schemas.py  seed.py  services.py  settings.py  state.py
harborline/api/: rest.py
harborline/graph/: __init__.py  db.py  domain.py  projector.py  service.py  store.py
harborline/middleware/: rate_limit.py
harborline/persistence/: db.py  models.py  repositories.py  seed.py
harborline/ui/: controllers.py  defaults.py  models.py
harborline/ui/static/: console.js  style.css
harborline/ui/templates/: base.html  dashboard.html  graph_insights.html  graphql.html  hoppscotch.html  inventory.html  new_order.html  order_detail.html  orders.html  payments.html  realtime.html
hoppscotch/: README.md  harborline.collection.json  harborline.env.json  harborline.environment.json
infra/ansible/: README.md  ansible.cfg
infra/ansible/inventory/: hosts.ini.example
infra/ansible/playbooks/: deploy.yml
infra/terraform/: README.md
infra/terraform/local/: main.tf  outputs.tf  variables.tf
scripts/: compute_signature.js  hopp_e2e.sh  run_hoppscotch_cli.sh  run_local.sh  sample-webhook.json
tests/: test_api.py  test_ui.py
