[project]
name = "pythonproject10"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "PyJWT>=2.8,<3.0",
    "python-multipart>=0.0.9,<1.0",
    "strawberry-graphql>=0.247,<1.0",
    "jinja2>=3.1,<4.0",
    "pydantic-settings>=2.2,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "httpx>=0.27,<1.0",
]
